k8s/eureka-service-deployment.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  annotations:
#    kompose.cmd: C:\WINDOWS\system32\kompose.exe convert -f docker-compose.yml -o k8s/
#    kompose.version: 1.30.0 (9d8dcb518)
#  creationTimestamp: null
#  labels:
#    io.kompose.service: eureka-service
#  name: eureka-service
#  namespace: default
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      io.kompose.service: eureka-service
#  strategy: {}
#  template:
#    metadata:
#      annotations:
#        kompose.cmd: C:\WINDOWS\system32\kompose.exe convert -f docker-compose.yml -o k8s/
#        kompose.version: 1.30.0 (9d8dcb518)
#      creationTimestamp: null
#      labels:
#        io.kompose.network/musical-microservice-microservice-net: "true"
#        io.kompose.service: eureka-service
#    spec:
#      containers:
#        - image: eureka-service
#          name: eureka-service
#          ports:
#            - containerPort: 8761
#              hostPort: 8761
#              protocol: TCP
#          resources: {}
#      restartPolicy: Always
#status: {}

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-service
  labels:
    app: eureka-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-service
  template:
    metadata:
      labels:
        app: eureka-service
    spec:
      containers:
        - name: eureka-service
          image: eureka-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
          resources: {}
      restartPolicy: Always
