k8s/api-gateway-service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  annotations:
#    kompose.cmd: C:\WINDOWS\system32\kompose.exe convert -f docker-compose.yml -o k8s/
#    kompose.version: 1.30.0 (9d8dcb518)
#  creationTimestamp: null
#  labels:
#    io.kompose.service: api-gateway
#  name: api-gateway
#  namespace: default
#spec:
#  ports:
#    - name: "9000"
#      port: 9000
#      targetPort: 9000
#  selector:
#    io.kompose.service: api-gateway
#status:
#  loadBalancer: {}


apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP  # Để trong cluster, đổi thành NodePort nếu cần truy cập từ ngoài

#  type: NodePort
#  ports:
#    - protocol: TCP
#      port: 9000
#      targetPort: 9000
#      nodePort: 30090  # Truy cập từ ngoài qua http://localhost:30090
