k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: musical-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: huutai2403/api-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: musical-microservice
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: LoadBalancer
