k8s/auth-service-service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  annotations:
#    kompose.cmd: C:\WINDOWS\system32\kompose.exe convert -f docker-compose.yml -o k8s/
#    kompose.version: 1.30.0 (9d8dcb518)
#  creationTimestamp: null
#  labels:
#    io.kompose.service: auth-service
#  name: auth-service
#  namespace: default
#spec:
#  ports:
#    - name: "8081"
#      port: 8081
#      targetPort: 8081
#  selector:
#    io.kompose.service: auth-service
#status:
#  loadBalancer: {}

apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP  # Chỉ gọi từ trong cluster

#  type: NodePort
#  ports:
#    - protocol: TCP
#      port: 8081
#      targetPort: 8081
#      nodePort: 30081  # Truy cập từ ngoài qua http://localhost:30081
