k8s/eureka-service-service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  annotations:
#    kompose.cmd: C:\WINDOWS\system32\kompose.exe convert -f docker-compose.yml -o k8s/
#    kompose.version: 1.30.0 (9d8dcb518)
#  creationTimestamp: null
#  labels:
#    io.kompose.service: eureka-service
#  name: eureka-service
#  namespace: default
#spec:
#  ports:
#    - name: "8761"
#      port: 8761
#      targetPort: 8761
#  selector:
#    io.kompose.service: eureka-service
#status:
#  loadBalancer: {}

apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  labels:
    app: eureka-service
spec:
  selector:
    app: eureka-service
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  type: ClusterIP  # Dùng ClusterIP để chỉ gọi trong cluster
