k8s/eureka-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-service
  namespace: musical-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-service
  template:
    metadata:
      labels:
        app: eureka-service
    spec:
      containers:
        - name: eureka-service
          image: huutai2403/eureka-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  namespace: musical-microservice
spec:
  selector:
    app: eureka-service
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  type: ClusterIP
