k8s/minio-data-persistentvolumeclaim.yaml
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  creationTimestamp: null
#  labels:
#    io.kompose.service: minio-data
#  name: minio-data
#  namespace: default
#spec:
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 100Mi
#status: {}

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\WINDOWS\system32\kompose.exe convert -f docker-compose.yml -o k8s/
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: minio
  name: minio
  namespace: default
spec:
  ports:
    - name: "9001"
      port: 9001
      targetPort: 9000
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    io.kompose.service: minio
status:
  loadBalancer: {}
