k8s/minio-service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  annotations:
#    kompose.cmd: C:\WINDOWS\system32\kompose.exe convert -f docker-compose.yml -o k8s/
#    kompose.version: 1.30.0 (9d8dcb518)
#  creationTimestamp: null
#  labels:
#    io.kompose.service: minio
#  name: minio
#  namespace: default
#spec:
#  ports:
#    - name: "9001"
#      port: 9001
#      targetPort: 9000
#    - name: "9090"
#      port: 9090
#      targetPort: 9090
#  selector:
#    io.kompose.service: minio
#status:
#  loadBalancer: {}
#apiVersion: v1
#kind: Service
#metadata:
#  annotations:
#    kompose.cmd: C:\WINDOWS\system32\kompose.exe convert -f docker-compose.yml -o k8s/
#    kompose.version: 1.30.0 (9d8dcb518)
#  creationTimestamp: null
#  labels:
#    io.kompose.service: grafana
#  name: grafana
#  namespace: default
#spec:
#  ports:
#    - name: "3001"
#      port: 3001
#      targetPort: 3000
#  selector:
#    io.kompose.service: grafana
#status:
#  loadBalancer: {}

apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  selector:
    app: minio
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: console
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
