k8s/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: musical-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio
          args:
            - "server"
            - "/data"
            - "--console-address=:9090"
          ports:
            - containerPort: 9000
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: musical-microservice
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
