k8s/mysql-service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  annotations:
#    kompose.cmd: C:\WINDOWS\system32\kompose.exe convert -f docker-compose.yml -o k8s/
#    kompose.version: 1.30.0 (9d8dcb518)
#  creationTimestamp: null
#  labels:
#    io.kompose.service: mysql
#  name: mysql
#  namespace: default
#spec:
#  ports:
#    - name: "3307"
#      port: 3307
#      targetPort: 3306
#  selector:
#    io.kompose.service: mysql
#status:
#  loadBalancer: {}
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
